# colorply

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  colorply  gdbinit  makefile  test.sh
doc/: add  helpfile
include/: Camera.hpp  Image.hpp  commands.hpp  functions.hpp  ioimage.hpp  ioply.hpp  ioxml.hpp  processing.hpp
src/: Camera.cpp  Image.cpp  commands.cpp  functions.cpp  ioimage.cpp  ioply.cpp  ioxml.cpp  main.cpp  processing.cpp
test/: test.cpp
